Fixing the image misalignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -467,3 +467,10 @@ ul > li {
     line-height: 1.5;
     margin-bottom: 20px;
 }
+
+
+.cropped-image {
+  width: 480px;
+  height: 400px;
+  border: 1px solid #D6AD60;
+}
